add vercel support

--- a/.vercel/output/static/blog.html
+++ b/.vercel/output/static/blog.html
@@ -10,12 +10,12 @@
 		<link href="./_app/immutable/assets/0.c39f0e19.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/5.6b6a6b3e.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Comment.6cb1bf52.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.9d2d424e.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.ef84d4ce.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.387d4020.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.0d0472fe.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.078fa873.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.f7adf726.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.f5b05b5f.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.63706184.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.42b7a577.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.a4192956.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c0f316b9.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.36af1542.js">
@@ -38,7 +38,7 @@
 			<script type="application/json" data-sveltekit-fetched data-url="/api/posts">{"status":200,"statusText":"","headers":{},"body":"[{\"title\":\"Welcome!\",\"description\":\"This is my first ever blog\",\"date\":\"2023-09-13\",\"categories\":[\"oh my gaah\"],\"published\":true,\"slug\":\"welcome\"}]"}</script>
 			<script>
 				{
-					__sveltekit_1xuir1w = {
+					__sveltekit_1i75ayb = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -48,8 +48,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.9d2d424e.js"),
-						import("./_app/immutable/entry/app.63706184.js")
+						import("./_app/immutable/entry/start.ef84d4ce.js"),
+						import("./_app/immutable/entry/app.42b7a577.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
