--- a/.vercel/output/static/index.html
+++ b/.vercel/output/static/index.html
@@ -11,12 +11,12 @@
 		<link href="./_app/immutable/assets/2.b8708e47.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Comment.6cb1bf52.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Socials.019af90f.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.9d2d424e.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.ef84d4ce.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.387d4020.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.0d0472fe.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.078fa873.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.f7adf726.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.f5b05b5f.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.63706184.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.42b7a577.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.a4192956.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c0f316b9.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.36af1542.js">
@@ -39,7 +39,7 @@
 			
 			<script>
 				{
-					__sveltekit_1xuir1w = {
+					__sveltekit_1i75ayb = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -49,8 +49,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.9d2d424e.js"),
-						import("./_app/immutable/entry/app.63706184.js")
+						import("./_app/immutable/entry/start.ef84d4ce.js"),
+						import("./_app/immutable/entry/app.42b7a577.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
