added metatags and changed titles

--- a/src/app.html
+++ b/src/app.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Luan's Portfolio</title>
+		<title>Lulu</title>
 		<meta charset="utf-8" />
 		<link rel="icon" href="https://fav.farm/🌻" />
 		<link rel="alternate" type="application/atom+xml" href="/rss.xml" />
@@ -14,6 +14,25 @@
 				? document.documentElement.setAttribute('color-scheme', theme)
 				: localStorage.setItem('color-scheme', 'dark');
 		</script>
+
+		<!-- Primary Meta Tags -->
+		<title>Lulu (pluwshy)</title>
+		<meta name="title" content="Lulu (pluwshy)" />
+		<meta name="description" content="My personal website!" />
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://pluwshy.gay/" />
+		<meta property="og:title" content="Lulu (pluwshy)" />
+		<meta property="og:description" content="My personal website!" />
+		<meta property="og:image" content="thumb.jpg" />
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://pluwshy.gay/" />
+		<meta property="twitter:title" content="Lulu (pluwshy)" />
+		<meta property="twitter:description" content="My personal website!" />
+		<meta property="twitter:image" content="thumb.jpg" />
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
