changed thumb path

--- a/src/app.html
+++ b/src/app.html
@@ -25,14 +25,14 @@
 		<meta property="og:url" content="https://pluwshy.gay/" />
 		<meta property="og:title" content="Lulu (pluwshy)" />
 		<meta property="og:description" content="My personal website!" />
-		<meta property="og:image" content="../static/thumb.jpg" />
+		<meta property="og:image" content="https://pluwshy.gay/thumb.jpg" />
 
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image" />
 		<meta property="twitter:url" content="https://pluwshy.gay/" />
 		<meta property="twitter:title" content="Lulu (pluwshy)" />
 		<meta property="twitter:description" content="My personal website!" />
-		<meta property="twitter:image" content="../static/thumb.jpg" />
+		<meta property="twitter:image" content="https://pluwshy.gay/thumb.jpg" />
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
