renamed twitter meta tags

--- a/src/app.html
+++ b/src/app.html
@@ -28,11 +28,11 @@
 		<meta property="og:image" content="https://pluwshy.gay/thumb.jpg" />
 
 		<!-- Twitter -->
-		<meta property="twitter:card" content="summary_large_image" />
-		<meta property="twitter:url" content="https://pluwshy.gay/" />
-		<meta property="twitter:title" content="Lulu (pluwshy)" />
-		<meta property="twitter:description" content="My personal website!" />
-		<meta property="twitter:image" content="https://pluwshy.gay/thumb.jpg" />
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:url" content="https://pluwshy.gay/" />
+		<meta name="twitter:title" content="Lulu (pluwshy)" />
+		<meta name="twitter:description" content="My personal website!" />
+		<meta name="twitter:image" content="https://pluwshy.gay/thumb.jpg" />
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
