changed blog card

--- a/src/app.html
+++ b/src/app.html
@@ -24,6 +24,8 @@
 		<meta name="twitter:description" content="My personal website!" />
 		<meta name="twitter:image" content="https://pluwshy.gay/thumb.jpg" />
 
+		<meta name="theme-color" data-react-helmet="true" content="#E99B62" />
+
 		%sveltekit.head%
 		<script type="module">
 			const theme = localStorage.getItem('color-scheme');
